--- a/_sass/_language-switcher.scss
+++ b/_sass/_language-switcher.scss
@@ -68,6 +68,7 @@
       display: none !important;
       visibility: hidden !important;
       opacity: 0 !important;
+      pointer-events: none !important;
     }
     
     .language-switcher {
