--- a/_layouts/page_zh.html
+++ b/_layouts/page_zh.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>孙泽敏 - 个人主页</title>
+    <title>孙泽敏 学术主页</title>
     
     <!-- CSS -->
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
